# tell-me-your-secrets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  Readme.md  config.yml  defaults.py  erase_build.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  sniff_my_secrets.py  test.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
tell_me_your_secrets/: __init__.py  __main__.py  config.yml  defaults.py  logger.py  processor.py  utils.py
test/: test_entropy.py  test_load_signatures.py  test_main.py  test_processor.py  test_regex_signature.py  test_simple_match.py
