[tool.poetry]
name = "tell-me-your-secrets"
version = "2.4.2"
description = "A simple module which finds files with different secrets keys present inside a directory"
authors = ["Valay Dave <valaygaurang@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/valayDave/tell-me-your-secrets"
repository = "https://github.com/valayDave/tell-me-your-secrets"
keywords = ["Security", "SSH", "Secret Keys", "SysAdmin"]

[tool.poetry.scripts]
tell-me-your-secrets = "tell_me_your_secrets.__main__:main"

[tool.poetry.dependencies]
python = "^3.7.1"
PyYAML = "^6.0"
pandas = "^1.3"
gitignore-parser = "^0.1.3"
single-source = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
